--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -194,12 +194,11 @@ libmpclowcomm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	../../MPC_Launch/src/libmpclaunch.la $(am__DEPENDENCIES_2)
 am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c ft.c \
 	group.c communicator.c shm_coll.c lowcomm_config.c \
-	sctk_low_level_comm.c multirail.c sctk_net_tools.c \
-	sctk_net_topology.c lowcomm_thread.c mqd.c datatypes_common.c \
-	sctk_rail.c reorder.c endpoint.c sctk_topological_polling.c \
-	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
-	handle_ctx.c alloc_mem.c ./tcp/tcp.c ./tcp/tcp_toolkit.c \
-	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
+	sctk_low_level_comm.c sctk_net_tools.c sctk_net_topology.c \
+	lowcomm_thread.c mqd.c datatypes_common.c sctk_rail.c \
+	reorder.c endpoint.c sctk_topological_rail.c sctk_window.c \
+	workshare.c pset.c handle_ctx.c ./tcp/tcp.c \
+	./tcp/tcp_toolkit.c ./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
 	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
 	./shm/sctk_shm_raw_queues_internals.c ./ib/async.c \
@@ -273,20 +272,19 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @MPC_HAVE_AM_TRUE@am__objects_7 = am.lo
 am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo ft.lo \
 	group.lo communicator.lo shm_coll.lo lowcomm_config.lo \
-	sctk_low_level_comm.lo multirail.lo sctk_net_tools.lo \
-	sctk_net_topology.lo lowcomm_thread.lo mqd.lo \
-	datatypes_common.lo sctk_rail.lo reorder.lo endpoint.lo \
-	sctk_topological_polling.lo sctk_topological_rail.lo \
-	sctk_window.lo workshare.lo pset.lo handle_ctx.lo alloc_mem.lo \
-	./tcp/tcp.lo ./tcp/tcp_toolkit.lo ./shm/sctk_shm.lo \
-	./shm/sctk_shm_eager.lo ./shm/sctk_shm_raw_queues.lo \
-	./shm/sctk_shm_cma.lo ./shm/sctk_shm_frag.lo \
-	./shm/sctk_shm_qemu.lo ./shm/sctk_shm_raw_queues_internals.lo \
-	$(am__objects_1) $(am__objects_2) $(am__objects_3) \
-	$(am__objects_4) $(am__objects_5) $(am__objects_6) \
-	./cplane/auth.lo ./cplane/peer.lo ./cplane/proto.lo \
-	./cplane/port.lo ./cplane/monitor.lo ./cplane/set.lo \
-	./cplane/uid.lo ./cplane/name.lo $(am__objects_7)
+	sctk_low_level_comm.lo sctk_net_tools.lo sctk_net_topology.lo \
+	lowcomm_thread.lo mqd.lo datatypes_common.lo sctk_rail.lo \
+	reorder.lo endpoint.lo sctk_topological_rail.lo sctk_window.lo \
+	workshare.lo pset.lo handle_ctx.lo ./tcp/tcp.lo \
+	./tcp/tcp_toolkit.lo ./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
+	./shm/sctk_shm_raw_queues.lo ./shm/sctk_shm_cma.lo \
+	./shm/sctk_shm_frag.lo ./shm/sctk_shm_qemu.lo \
+	./shm/sctk_shm_raw_queues_internals.lo $(am__objects_1) \
+	$(am__objects_2) $(am__objects_3) $(am__objects_4) \
+	$(am__objects_5) $(am__objects_6) ./cplane/auth.lo \
+	./cplane/peer.lo ./cplane/proto.lo ./cplane/port.lo \
+	./cplane/monitor.lo ./cplane/set.lo ./cplane/uid.lo \
+	./cplane/name.lo $(am__objects_7)
 libmpclowcomm_la_OBJECTS = $(am_libmpclowcomm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -667,7 +665,7 @@ AM_CPPFLAGS = -I$(abs_top_srcdir)/src/MPC_Common/include/ \
 	-I$(abs_srcdir)/shm/ \
 	-I$(abs_top_srcdir)/src/MPC_Lowcomm/src/cplane/ \
 	$(am__append_1) $(am__append_2) $(am__append_3) \
-	$(am__append_5) $(am__append_9) $(am__append_12)
+	$(am__append_5) $(am__append_9) $(am__append_11)
 lib_LTLIBRARIES = libmpclowcomm.la
 
 # low-level communication #
@@ -677,17 +675,16 @@ lib_LTLIBRARIES = libmpclowcomm.la
 # SHM driver #
 libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c ft.c group.c \
 	communicator.c shm_coll.c lowcomm_config.c \
-	sctk_low_level_comm.c multirail.c sctk_net_tools.c \
-	sctk_net_topology.c lowcomm_thread.c mqd.c datatypes_common.c \
-	sctk_rail.c reorder.c endpoint.c sctk_topological_polling.c \
-	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
-	handle_ctx.c alloc_mem.c ./tcp/tcp.c ./tcp/tcp_toolkit.c \
-	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
+	sctk_low_level_comm.c sctk_net_tools.c sctk_net_topology.c \
+	lowcomm_thread.c mqd.c datatypes_common.c sctk_rail.c \
+	reorder.c endpoint.c sctk_topological_rail.c sctk_window.c \
+	workshare.c pset.c handle_ctx.c ./tcp/tcp.c \
+	./tcp/tcp_toolkit.c ./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
 	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
 	./shm/sctk_shm_raw_queues_internals.c $(am__append_4) \
 	$(am__append_6) $(am__append_7) $(am__append_8) \
-	$(am__append_10) $(am__append_11) ./cplane/auth.c \
+	$(am__append_10) $(am__append_12) ./cplane/auth.c \
 	./cplane/peer.c ./cplane/proto.c ./cplane/port.c \
 	./cplane/monitor.c ./cplane/set.c ./cplane/uid.c \
 	./cplane/name.c $(am__append_13)
@@ -867,13 +864,6 @@ ofi/$(DEPDIR)/$(am__dirstamp):
 ./ofi/ofi_rdma.lo: ofi/$(am__dirstamp) ofi/$(DEPDIR)/$(am__dirstamp)
 ./ofi/ofi_toolkit.lo: ofi/$(am__dirstamp) \
 	ofi/$(DEPDIR)/$(am__dirstamp)
-tbsm/$(am__dirstamp):
-	@$(MKDIR_P) ./tbsm
-	@: > tbsm/$(am__dirstamp)
-tbsm/$(DEPDIR)/$(am__dirstamp):
-	@$(MKDIR_P) ./tbsm/$(DEPDIR)
-	@: > tbsm/$(DEPDIR)/$(am__dirstamp)
-./tbsm/tbsm.lo: tbsm/$(am__dirstamp) tbsm/$(DEPDIR)/$(am__dirstamp)
 lcp/$(am__dirstamp):
 	@$(MKDIR_P) ./lcp
 	@: > lcp/$(am__dirstamp)
@@ -960,15 +950,12 @@ mostlyclean-compile:
 	-rm -f ./portals_am/*.lo
 	-rm -f ./shm/*.$(OBJEXT)
 	-rm -f ./shm/*.lo
-	-rm -f ./tbsm/*.$(OBJEXT)
-	-rm -f ./tbsm/*.lo
 	-rm -f ./tcp/*.$(OBJEXT)
 	-rm -f ./tcp/*.lo
 
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/alloc_mem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/am.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/coll.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm.Plo@am__quote@
@@ -981,7 +968,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_config.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_thread.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mqd.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multirail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pset.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/reorder.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_checksum.Plo@am__quote@
@@ -989,7 +975,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_tools.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_topology.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_rail.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_topological_polling.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_topological_rail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_window.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/shm_coll.Plo@am__quote@
@@ -1066,7 +1051,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_qemu.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues_internals.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./tbsm/$(DEPDIR)/tbsm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/tcp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/tcp_toolkit.Plo@am__quote@
 
@@ -1107,7 +1091,6 @@ clean-libtool:
 	-rm -rf ./portals/.libs ./portals/_libs
 	-rm -rf ./portals_am/.libs ./portals_am/_libs
 	-rm -rf ./shm/.libs ./shm/_libs
-	-rm -rf ./tbsm/.libs ./tbsm/_libs
 	-rm -rf ./tcp/.libs ./tcp/_libs
 
 ID: $(am__tagged_files)
@@ -1241,8 +1224,6 @@ distclean-generic:
 	-rm -f portals_am/$(am__dirstamp)
 	-rm -f shm/$(DEPDIR)/$(am__dirstamp)
 	-rm -f shm/$(am__dirstamp)
-	-rm -f tbsm/$(DEPDIR)/$(am__dirstamp)
-	-rm -f tbsm/$(am__dirstamp)
 	-rm -f tcp/$(DEPDIR)/$(am__dirstamp)
 	-rm -f tcp/$(am__dirstamp)
 
@@ -1255,7 +1236,7 @@ clean-am: clean-generic clean-libLTLIBRARIES clean-libtool \
 	mostlyclean-am
 
 distclean: distclean-am
-	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tbsm/$(DEPDIR) ./tcp/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tcp/$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -1301,7 +1282,7 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tbsm/$(DEPDIR) ./tcp/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tcp/$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
