--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -93,9 +93,29 @@ host_triplet = @host@
 @MPC_THREAD_ENABLED_TRUE@am__append_3 = -I$(abs_top_srcdir)/src/MPC_Threads/src/ -I$(abs_top_srcdir)/src/MPC_Threads/include/ -I$(abs_top_srcdir)/src/MPC_Topology/include/
 @MPC_MPI_ENABLED_TRUE@am__append_4 = -I$(abs_top_srcdir)/src/MPC_MPI/include/
 
+#
+# All the components below
+#
+
+# LCP #
+@LCP_ENABLED_TRUE@am__append_3 = -I$(abs_src_dir)/tbsm/ \
+@LCP_ENABLED_TRUE@	-I$(abs_src_dir)/lcp/ -I$(abs_src_dir)/lcr/
+@LCP_ENABLED_TRUE@am__append_4 = ./tbsm/tbsm.c ./lcp/lcp_context.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_ep.c ./lcp/lcp_pending.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_progress.c ./lcp/lcp_recv.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_send.c ./lcp/lcp_tag_lists.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_datatype.c ./lcp/lcp_probe.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_request.c ./lcp/lcp_common.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_mem.c ./lcp/lcp_rma.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_task.c ./lcr/lcr_component.c
+@MPC_HAVE_AM_TRUE@am__append_5 = am.c
+@MPC_HAVE_AM_TRUE@am__append_6 = $(FFI_LIBS)
+
 # IB driver #
-@INFINIBAND_DRIVER_ENABLED_TRUE@am__append_5 = -I$(abs_srcdir)/ib/
-@INFINIBAND_DRIVER_ENABLED_TRUE@am__append_6 = ./ib/async.c \
+@INFINIBAND_DRIVER_ENABLED_TRUE@am__append_7 = -I$(abs_srcdir)/ib/
+@INFINIBAND_DRIVER_ENABLED_TRUE@am__append_8 = ./ib/async.c \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/buffered.c ./ib/ib.c \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/cm.c ./ib/ibconfig.c \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/cp.c ./ib/ibdevice.c \
@@ -107,10 +127,9 @@ host_triplet = @host@
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/ibufs_rdma.c
 
 # PTL driver #
-@PORTALS4_DRIVER_ENABLED_TRUE@am__append_7 = -I$(abs_srcdir)/portals/
-
-# PTL-AM driver #
-@PORTALS4_DRIVER_ENABLED_TRUE@am__append_8 = ./portals/sctk_portals.c \
+@PORTALS4_DRIVER_ENABLED_TRUE@am__append_9 = -I$(abs_srcdir)/portals/
+@PORTALS4_DRIVER_ENABLED_TRUE@am__append_10 =  \
+@PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_portals.c \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_cm.c \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_eager.c \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_iface.c \
@@ -118,7 +137,7 @@ host_triplet = @host@
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdma.c \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdv.c \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_toolkit.c
-@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__append_7 = ./portals/lcr_ptl.c ./portals/lcr_ptl_recv.c ./portals/lcr_ptl_iface.c
+@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__append_11 = ./portals/lcr_ptl.c ./portals/lcr_ptl_recv.c ./portals/lcr_ptl_iface.c
 
 # PTL-AM driver #
 @PORTALS4_DRIVER_ENABLED_TRUE@am__append_8 = ./portals_am/sctk_ptl_am_iface.c  ./portals_am/sctk_ptl_am_toolkit.c ./portals_am/sctk_ptl_am_arpc_api.c ./portals_am/arpc_weak.c
@@ -193,12 +212,21 @@ am__DEPENDENCIES_1 =
 libmpclowcomm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	../../MPC_Launch/src/libmpclaunch.la $(am__DEPENDENCIES_2)
 am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c ft.c \
-	group.c communicator.c shm_coll.c lowcomm_config.c \
-	sctk_low_level_comm.c sctk_net_tools.c sctk_net_topology.c \
-	lowcomm_thread.c mqd.c datatypes_common.c sctk_rail.c \
-	reorder.c endpoint.c sctk_topological_rail.c sctk_window.c \
-	workshare.c pset.c handle_ctx.c ./tcp/tcp.c \
-	./tcp/tcp_toolkit.c ./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
+	group.c communicator.c shm_coll.c lowcomm_config.c alloc_mem.c \
+	lowcomm.c sctk_net_tools.c lowcomm_thread.c mqd.c \
+	datatypes_common.c rail.c reorder.c endpoint.c \
+	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
+	handle_ctx.c ./cplane/auth.c ./cplane/peer.c ./cplane/proto.c \
+	./cplane/port.c ./cplane/monitor.c ./cplane/set.c \
+	./cplane/uid.c ./cplane/name.c ./tbsm/tbsm.c \
+	./lcp/lcp_context.c ./lcp/lcp_ep.c ./lcp/lcp_pending.c \
+	./lcp/lcp_progress.c ./lcp/lcp_recv.c ./lcp/lcp_send.c \
+	./lcp/lcp_tag_lists.c ./lcp/lcp_datatype.c ./lcp/lcp_probe.c \
+	./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c ./lcp/lcp_request.c \
+	./lcp/lcp_common.c ./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c \
+	./lcp/lcp_mem.c ./lcp/lcp_rma.c ./lcp/lcp_task.c \
+	./lcr/lcr_component.c am.c ./tcp/tcp.c ./tcp/tcp_toolkit.c \
+	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
 	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
 	./shm/sctk_shm_raw_queues_internals.c ./ib/async.c \
@@ -227,7 +255,18 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c ft.c \
 	./cplane/monitor.c ./cplane/set.c ./cplane/uid.c \
 	./cplane/name.c am.c
 am__dirstamp = $(am__leading_dot)dirstamp
-@INFINIBAND_DRIVER_ENABLED_TRUE@am__objects_1 = ./ib/async.lo \
+@LCP_ENABLED_TRUE@am__objects_1 = ./tbsm/tbsm.lo ./lcp/lcp_context.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_ep.lo ./lcp/lcp_pending.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_progress.lo ./lcp/lcp_recv.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_send.lo ./lcp/lcp_tag_lists.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_datatype.lo ./lcp/lcp_probe.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag_matching.lo ./lcp/lcp_tag.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_request.lo ./lcp/lcp_common.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_rndv.lo ./lcp/lcp_tag_offload.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_mem.lo ./lcp/lcp_rma.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_task.lo ./lcr/lcr_component.lo
+@MPC_HAVE_AM_TRUE@am__objects_2 = am.lo
+@INFINIBAND_DRIVER_ENABLED_TRUE@am__objects_3 = ./ib/async.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/buffered.lo ./ib/ib.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/cm.lo ./ib/ibconfig.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/cp.lo ./ib/ibdevice.lo \
@@ -239,7 +278,7 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/ibtopology.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/ibufs.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/ibufs_rdma.lo
-@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_2 =  \
+@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_4 =  \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_portals.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_cm.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_eager.lo \
@@ -248,14 +287,14 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdma.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdv.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_toolkit.lo
-@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_3 = ./portals/lcr_ptl.lo \
+@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_5 = ./portals/lcr_ptl.lo \
 @LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@	./portals/lcr_ptl_recv.lo \
 @LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@	./portals/lcr_ptl_iface.lo
-@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_4 = ./portals_am/sctk_ptl_am_iface.lo \
+@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_6 = ./portals_am/sctk_ptl_am_iface.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals_am/sctk_ptl_am_toolkit.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals_am/sctk_ptl_am_arpc_api.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals_am/arpc_weak.lo
-@OFI_DRIVER_ENABLED_TRUE@am__objects_5 = ./ofi/ofi.lo ./ofi/ofi_msg.lo \
+@OFI_DRIVER_ENABLED_TRUE@am__objects_7 = ./ofi/ofi.lo ./ofi/ofi_msg.lo \
 @OFI_DRIVER_ENABLED_TRUE@	./ofi/ofi_rdma.lo \
 @OFI_DRIVER_ENABLED_TRUE@	./ofi/ofi_toolkit.lo
 @LCP_ENABLED_TRUE@am__objects_6 = ./tbsm/tbsm.lo ./lcp/lcp_context.lo \
@@ -272,19 +311,19 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @MPC_HAVE_AM_TRUE@am__objects_7 = am.lo
 am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo ft.lo \
 	group.lo communicator.lo shm_coll.lo lowcomm_config.lo \
-	sctk_low_level_comm.lo sctk_net_tools.lo sctk_net_topology.lo \
-	lowcomm_thread.lo mqd.lo datatypes_common.lo sctk_rail.lo \
-	reorder.lo endpoint.lo sctk_topological_rail.lo sctk_window.lo \
-	workshare.lo pset.lo handle_ctx.lo ./tcp/tcp.lo \
+	alloc_mem.lo lowcomm.lo sctk_net_tools.lo lowcomm_thread.lo \
+	mqd.lo datatypes_common.lo rail.lo reorder.lo endpoint.lo \
+	sctk_topological_rail.lo sctk_window.lo workshare.lo pset.lo \
+	handle_ctx.lo ./cplane/auth.lo ./cplane/peer.lo \
+	./cplane/proto.lo ./cplane/port.lo ./cplane/monitor.lo \
+	./cplane/set.lo ./cplane/uid.lo ./cplane/name.lo \
+	$(am__objects_1) $(am__objects_2) ./tcp/tcp.lo \
 	./tcp/tcp_toolkit.lo ./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
 	./shm/sctk_shm_raw_queues.lo ./shm/sctk_shm_cma.lo \
 	./shm/sctk_shm_frag.lo ./shm/sctk_shm_qemu.lo \
-	./shm/sctk_shm_raw_queues_internals.lo $(am__objects_1) \
-	$(am__objects_2) $(am__objects_3) $(am__objects_4) \
-	$(am__objects_5) $(am__objects_6) ./cplane/auth.lo \
-	./cplane/peer.lo ./cplane/proto.lo ./cplane/port.lo \
-	./cplane/monitor.lo ./cplane/set.lo ./cplane/uid.lo \
-	./cplane/name.lo $(am__objects_7)
+	./shm/sctk_shm_raw_queues_internals.lo $(am__objects_3) \
+	$(am__objects_4) $(am__objects_5) $(am__objects_6) \
+	$(am__objects_7)
 libmpclowcomm_la_OBJECTS = $(am_libmpclowcomm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -665,7 +704,7 @@ AM_CPPFLAGS = -I$(abs_top_srcdir)/src/MPC_Common/include/ \
 	-I$(abs_srcdir)/shm/ \
 	-I$(abs_top_srcdir)/src/MPC_Lowcomm/src/cplane/ \
 	$(am__append_1) $(am__append_2) $(am__append_3) \
-	$(am__append_5) $(am__append_9) $(am__append_11)
+	$(am__append_7) $(am__append_9) $(am__append_13)
 lib_LTLIBRARIES = libmpclowcomm.la
 
 # low-level communication #
@@ -674,24 +713,23 @@ lib_LTLIBRARIES = libmpclowcomm.la
 
 # SHM driver #
 libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c ft.c group.c \
-	communicator.c shm_coll.c lowcomm_config.c \
-	sctk_low_level_comm.c sctk_net_tools.c sctk_net_topology.c \
-	lowcomm_thread.c mqd.c datatypes_common.c sctk_rail.c \
-	reorder.c endpoint.c sctk_topological_rail.c sctk_window.c \
-	workshare.c pset.c handle_ctx.c ./tcp/tcp.c \
-	./tcp/tcp_toolkit.c ./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
-	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
-	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
-	./shm/sctk_shm_raw_queues_internals.c $(am__append_4) \
-	$(am__append_6) $(am__append_7) $(am__append_8) \
-	$(am__append_10) $(am__append_12) ./cplane/auth.c \
-	./cplane/peer.c ./cplane/proto.c ./cplane/port.c \
-	./cplane/monitor.c ./cplane/set.c ./cplane/uid.c \
-	./cplane/name.c $(am__append_13)
+	communicator.c shm_coll.c lowcomm_config.c alloc_mem.c \
+	lowcomm.c sctk_net_tools.c lowcomm_thread.c mqd.c \
+	datatypes_common.c rail.c reorder.c endpoint.c \
+	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
+	handle_ctx.c ./cplane/auth.c ./cplane/peer.c ./cplane/proto.c \
+	./cplane/port.c ./cplane/monitor.c ./cplane/set.c \
+	./cplane/uid.c ./cplane/name.c $(am__append_4) $(am__append_5) \
+	./tcp/tcp.c ./tcp/tcp_toolkit.c ./shm/sctk_shm.c \
+	./shm/sctk_shm_eager.c ./shm/sctk_shm_raw_queues.c \
+	./shm/sctk_shm_cma.c ./shm/sctk_shm_frag.c \
+	./shm/sctk_shm_qemu.c ./shm/sctk_shm_raw_queues_internals.c \
+	$(am__append_8) $(am__append_10) $(am__append_11) \
+	$(am__append_12) $(am__append_14)
 
 # library dependency #
 libmpclowcomm_la_LIBADD = $(ALLOC_LIBS) \
-	../../MPC_Launch/src/libmpclaunch.la -lm -lrt $(am__append_14)
+	../../MPC_Launch/src/libmpclaunch.la -lm -lrt $(am__append_6)
 all: all-am
 
 .SUFFIXES:
@@ -760,6 +798,75 @@ clean-libLTLIBRARIES:
 	  echo rm -f $${locs}; \
 	  rm -f $${locs}; \
 	}
+cplane/$(am__dirstamp):
+	@$(MKDIR_P) ./cplane
+	@: > cplane/$(am__dirstamp)
+cplane/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) ./cplane/$(DEPDIR)
+	@: > cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/auth.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/peer.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/proto.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/port.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/monitor.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/set.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/uid.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+./cplane/name.lo: cplane/$(am__dirstamp) \
+	cplane/$(DEPDIR)/$(am__dirstamp)
+tbsm/$(am__dirstamp):
+	@$(MKDIR_P) ./tbsm
+	@: > tbsm/$(am__dirstamp)
+tbsm/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) ./tbsm/$(DEPDIR)
+	@: > tbsm/$(DEPDIR)/$(am__dirstamp)
+./tbsm/tbsm.lo: tbsm/$(am__dirstamp) tbsm/$(DEPDIR)/$(am__dirstamp)
+lcp/$(am__dirstamp):
+	@$(MKDIR_P) ./lcp
+	@: > lcp/$(am__dirstamp)
+lcp/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) ./lcp/$(DEPDIR)
+	@: > lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_context.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_ep.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_pending.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_progress.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_recv.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_send.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_tag_lists.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_datatype.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_probe.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_tag_matching.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_tag.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_request.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_common.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_rndv.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_tag_offload.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_mem.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_rma.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_task.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+lcr/$(am__dirstamp):
+	@$(MKDIR_P) ./lcr
+	@: > lcr/$(am__dirstamp)
+lcr/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) ./lcr/$(DEPDIR)
+	@: > lcr/$(DEPDIR)/$(am__dirstamp)
+./lcr/lcr_component.lo: lcr/$(am__dirstamp) \
+	lcr/$(DEPDIR)/$(am__dirstamp)
 tcp/$(am__dirstamp):
 	@$(MKDIR_P) ./tcp
 	@: > tcp/$(am__dirstamp)
@@ -950,12 +1057,15 @@ mostlyclean-compile:
 	-rm -f ./portals_am/*.lo
 	-rm -f ./shm/*.$(OBJEXT)
 	-rm -f ./shm/*.lo
+	-rm -f ./tbsm/*.$(OBJEXT)
+	-rm -f ./tbsm/*.lo
 	-rm -f ./tcp/*.$(OBJEXT)
 	-rm -f ./tcp/*.lo
 
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/alloc_mem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/am.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/coll.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm.Plo@am__quote@
@@ -965,16 +1075,15 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ft.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/group.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/handle_ctx.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_config.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_thread.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mqd.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pset.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/reorder.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_checksum.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_low_level_comm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_tools.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_topology.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_rail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_topological_rail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_window.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/shm_coll.Plo@am__quote@
@@ -1008,7 +1117,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_context.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_datatype.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_eager.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_ep.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_mem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_pending.Plo@am__quote@
@@ -1051,6 +1159,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_qemu.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues_internals.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./tbsm/$(DEPDIR)/tbsm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/tcp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/tcp_toolkit.Plo@am__quote@
 
@@ -1091,6 +1200,7 @@ clean-libtool:
 	-rm -rf ./portals/.libs ./portals/_libs
 	-rm -rf ./portals_am/.libs ./portals_am/_libs
 	-rm -rf ./shm/.libs ./shm/_libs
+	-rm -rf ./tbsm/.libs ./tbsm/_libs
 	-rm -rf ./tcp/.libs ./tcp/_libs
 
 ID: $(am__tagged_files)
@@ -1224,6 +1334,8 @@ distclean-generic:
 	-rm -f portals_am/$(am__dirstamp)
 	-rm -f shm/$(DEPDIR)/$(am__dirstamp)
 	-rm -f shm/$(am__dirstamp)
+	-rm -f tbsm/$(DEPDIR)/$(am__dirstamp)
+	-rm -f tbsm/$(am__dirstamp)
 	-rm -f tcp/$(DEPDIR)/$(am__dirstamp)
 	-rm -f tcp/$(am__dirstamp)
 
@@ -1236,7 +1348,7 @@ clean-am: clean-generic clean-libLTLIBRARIES clean-libtool \
 	mostlyclean-am
 
 distclean: distclean-am
-	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tcp/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tbsm/$(DEPDIR) ./tcp/$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -1282,7 +1394,7 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tcp/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) ./cplane/$(DEPDIR) ./ib/$(DEPDIR) ./lcp/$(DEPDIR) ./lcr/$(DEPDIR) ./ofi/$(DEPDIR) ./portals/$(DEPDIR) ./portals_am/$(DEPDIR) ./shm/$(DEPDIR) ./tbsm/$(DEPDIR) ./tcp/$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
@@ -1320,6 +1432,7 @@ uninstall-am: uninstall-libLTLIBRARIES
 .PRECIOUS: Makefile
 
 
+#AM Extensions #
 @MPC_HAVE_AM_TRUE@ # Active message support (ffi)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
