--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -105,11 +105,12 @@ host_triplet = @host@
 @LCP_ENABLED_TRUE@	./lcp/lcp_progress.c ./lcp/lcp_recv.c \
 @LCP_ENABLED_TRUE@	./lcp/lcp_send.c ./lcp/lcp_tag_lists.c \
 @LCP_ENABLED_TRUE@	./lcp/lcp_datatype.c ./lcp/lcp_probe.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_request.c ./lcp/lcp_common.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_mem.c ./lcp/lcp_rma.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_task.c ./lcr/lcr_component.c
+@LCP_ENABLED_TRUE@	./lcp/lcp_eager.c ./lcp/lcp_tag_matching.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag.c ./lcp/lcp_request.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_common.c ./lcp/lcp_rndv.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_rma.c ./lcp/lcp_task.c \
+@LCP_ENABLED_TRUE@	./lcr/lcr_component.c
 @MPC_HAVE_AM_TRUE@am__append_5 = am.c
 @MPC_HAVE_AM_TRUE@am__append_6 = $(FFI_LIBS)
 
@@ -221,11 +222,11 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c checksum.c ft.c \
 	./lcp/lcp_context.c ./lcp/lcp_ep.c ./lcp/lcp_pending.c \
 	./lcp/lcp_progress.c ./lcp/lcp_recv.c ./lcp/lcp_send.c \
 	./lcp/lcp_tag_lists.c ./lcp/lcp_datatype.c ./lcp/lcp_probe.c \
-	./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c ./lcp/lcp_request.c \
-	./lcp/lcp_common.c ./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c \
-	./lcp/lcp_mem.c ./lcp/lcp_rma.c ./lcp/lcp_task.c \
-	./lcr/lcr_component.c am.c ./tcp/tcp.c ./tcp/tcp_toolkit.c \
-	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
+	./lcp/lcp_eager.c ./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c \
+	./lcp/lcp_request.c ./lcp/lcp_common.c ./lcp/lcp_rndv.c \
+	./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c ./lcp/lcp_rma.c \
+	./lcp/lcp_task.c ./lcr/lcr_component.c am.c ./tcp/tcp.c \
+	./tcp/tcp_toolkit.c ./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
 	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
 	./shm/sctk_shm_raw_queues_internals.c ./ib/async.c \
@@ -259,11 +260,12 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @LCP_ENABLED_TRUE@	./lcp/lcp_progress.lo ./lcp/lcp_recv.lo \
 @LCP_ENABLED_TRUE@	./lcp/lcp_send.lo ./lcp/lcp_tag_lists.lo \
 @LCP_ENABLED_TRUE@	./lcp/lcp_datatype.lo ./lcp/lcp_probe.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_tag_matching.lo ./lcp/lcp_tag.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_request.lo ./lcp/lcp_common.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_rndv.lo ./lcp/lcp_tag_offload.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_mem.lo ./lcp/lcp_rma.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_task.lo ./lcr/lcr_component.lo
+@LCP_ENABLED_TRUE@	./lcp/lcp_eager.lo ./lcp/lcp_tag_matching.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag.lo ./lcp/lcp_request.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_common.lo ./lcp/lcp_rndv.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag_offload.lo ./lcp/lcp_mem.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_rma.lo ./lcp/lcp_task.lo \
+@LCP_ENABLED_TRUE@	./lcr/lcr_component.lo
 @MPC_HAVE_AM_TRUE@am__objects_2 = am.lo
 @INFINIBAND_DRIVER_ENABLED_TRUE@am__objects_3 = ./ib/async.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/buffered.lo ./ib/ib.lo \
@@ -849,6 +851,7 @@ lcp/$(DEPDIR)/$(am__dirstamp):
 ./lcp/lcp_datatype.lo: lcp/$(am__dirstamp) \
 	lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_probe.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_eager.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_tag_matching.lo: lcp/$(am__dirstamp) \
 	lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_tag.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
@@ -1118,6 +1121,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_context.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_datatype.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_eager.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_ep.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_mem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_pending.Plo@am__quote@
