--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -130,11 +130,11 @@ host_triplet = @host@
 @LCP_ENABLED_TRUE@	./lcp/lcp_pending.c ./lcp/lcp_progress.c \
 @LCP_ENABLED_TRUE@	./lcp/lcp_recv.c ./lcp/lcp_send.c \
 @LCP_ENABLED_TRUE@	./lcp/lcp_tag_lists.c ./lcp/lcp_probe.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_request.c ./lcp/lcp_common.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_mem.c ./lcp/lcp_rma.c \
-@LCP_ENABLED_TRUE@	./lcr/lcr_component.c
+@LCP_ENABLED_TRUE@	./lcp/lcp_task.c ./lcp/lcp_tag_matching.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag.c ./lcp/lcp_request.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_common.c ./lcp/lcp_rndv.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c \
+@LCP_ENABLED_TRUE@	./lcp/lcp_rma.c ./lcr/lcr_component.c
 @MPC_HAVE_AM_TRUE@am__append_13 = am.c
 @MPC_HAVE_AM_TRUE@am__append_14 = $(FFI_LIBS)
 subdir = src/MPC_Lowcomm/src
@@ -217,12 +217,12 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c ft.c \
 	./ofi/ofi_toolkit.c ./lcp/lcp_context.c ./lcp/lcp_ep.c \
 	./lcp/lcp_pending.c ./lcp/lcp_progress.c ./lcp/lcp_recv.c \
 	./lcp/lcp_send.c ./lcp/lcp_tag_lists.c ./lcp/lcp_probe.c \
-	./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c ./lcp/lcp_request.c \
-	./lcp/lcp_common.c ./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c \
-	./lcp/lcp_mem.c ./lcp/lcp_rma.c ./lcr/lcr_component.c \
-	./cplane/auth.c ./cplane/peer.c ./cplane/proto.c \
-	./cplane/port.c ./cplane/monitor.c ./cplane/set.c \
-	./cplane/uid.c ./cplane/name.c am.c
+	./lcp/lcp_task.c ./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c \
+	./lcp/lcp_request.c ./lcp/lcp_common.c ./lcp/lcp_rndv.c \
+	./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c ./lcp/lcp_rma.c \
+	./lcr/lcr_component.c ./cplane/auth.c ./cplane/peer.c \
+	./cplane/proto.c ./cplane/port.c ./cplane/monitor.c \
+	./cplane/set.c ./cplane/uid.c ./cplane/name.c am.c
 am__dirstamp = $(am__leading_dot)dirstamp
 @INFINIBAND_DRIVER_ENABLED_TRUE@am__objects_1 = ./ib/async.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/buffered.lo ./ib/ib.lo \
@@ -259,11 +259,11 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @LCP_ENABLED_TRUE@	./lcp/lcp_pending.lo ./lcp/lcp_progress.lo \
 @LCP_ENABLED_TRUE@	./lcp/lcp_recv.lo ./lcp/lcp_send.lo \
 @LCP_ENABLED_TRUE@	./lcp/lcp_tag_lists.lo ./lcp/lcp_probe.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_tag_matching.lo ./lcp/lcp_tag.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_request.lo ./lcp/lcp_common.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_rndv.lo ./lcp/lcp_tag_offload.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_mem.lo ./lcp/lcp_rma.lo \
-@LCP_ENABLED_TRUE@	./lcr/lcr_component.lo
+@LCP_ENABLED_TRUE@	./lcp/lcp_task.lo ./lcp/lcp_tag_matching.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag.lo ./lcp/lcp_request.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_common.lo ./lcp/lcp_rndv.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_tag_offload.lo ./lcp/lcp_mem.lo \
+@LCP_ENABLED_TRUE@	./lcp/lcp_rma.lo ./lcr/lcr_component.lo
 @MPC_HAVE_AM_TRUE@am__objects_7 = am.lo
 am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo ft.lo \
 	group.lo communicator.lo shm_coll.lo lowcomm_config.lo \
@@ -879,6 +879,7 @@ lcp/$(DEPDIR)/$(am__dirstamp):
 ./lcp/lcp_tag_lists.lo: lcp/$(am__dirstamp) \
 	lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_probe.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_task.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_tag_matching.lo: lcp/$(am__dirstamp) \
 	lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_tag.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
@@ -1015,6 +1016,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_tag_lists.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_tag_matching.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_tag_offload.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_task.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcr/$(DEPDIR)/lcr_component.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./ofi/$(DEPDIR)/ofi.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./ofi/$(DEPDIR)/ofi_msg.Plo@am__quote@
