--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -134,7 +134,8 @@ host_triplet = @host@
 @LCP_ENABLED_TRUE@	./lcp/lcp_tag.c ./lcp/lcp_request.c \
 @LCP_ENABLED_TRUE@	./lcp/lcp_common.c ./lcp/lcp_rndv.c \
 @LCP_ENABLED_TRUE@	./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c \
-@LCP_ENABLED_TRUE@	./lcp/lcp_rma.c ./lcr/lcr_component.c
+@LCP_ENABLED_TRUE@	./lcp/lcp_rma.c ./lcp/lcp_datatype.c \
+@LCP_ENABLED_TRUE@	./lcr/lcr_component.c
 @MPC_HAVE_AM_TRUE@am__append_13 = am.c
 @MPC_HAVE_AM_TRUE@am__append_14 = $(FFI_LIBS)
 subdir = src/MPC_Lowcomm/src
@@ -220,9 +221,10 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c ft.c \
 	./lcp/lcp_task.c ./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c \
 	./lcp/lcp_request.c ./lcp/lcp_common.c ./lcp/lcp_rndv.c \
 	./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c ./lcp/lcp_rma.c \
-	./lcr/lcr_component.c ./cplane/auth.c ./cplane/peer.c \
-	./cplane/proto.c ./cplane/port.c ./cplane/monitor.c \
-	./cplane/set.c ./cplane/uid.c ./cplane/name.c am.c
+	./lcp/lcp_datatype.c ./lcr/lcr_component.c ./cplane/auth.c \
+	./cplane/peer.c ./cplane/proto.c ./cplane/port.c \
+	./cplane/monitor.c ./cplane/set.c ./cplane/uid.c \
+	./cplane/name.c am.c
 am__dirstamp = $(am__leading_dot)dirstamp
 @INFINIBAND_DRIVER_ENABLED_TRUE@am__objects_1 = ./ib/async.lo \
 @INFINIBAND_DRIVER_ENABLED_TRUE@	./ib/buffered.lo ./ib/ib.lo \
@@ -263,7 +265,8 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @LCP_ENABLED_TRUE@	./lcp/lcp_tag.lo ./lcp/lcp_request.lo \
 @LCP_ENABLED_TRUE@	./lcp/lcp_common.lo ./lcp/lcp_rndv.lo \
 @LCP_ENABLED_TRUE@	./lcp/lcp_tag_offload.lo ./lcp/lcp_mem.lo \
-@LCP_ENABLED_TRUE@	./lcp/lcp_rma.lo ./lcr/lcr_component.lo
+@LCP_ENABLED_TRUE@	./lcp/lcp_rma.lo ./lcp/lcp_datatype.lo \
+@LCP_ENABLED_TRUE@	./lcr/lcr_component.lo
 @MPC_HAVE_AM_TRUE@am__objects_7 = am.lo
 am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo ft.lo \
 	group.lo communicator.lo shm_coll.lo lowcomm_config.lo \
@@ -891,6 +894,8 @@ lcp/$(DEPDIR)/$(am__dirstamp):
 	lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_mem.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
 ./lcp/lcp_rma.lo: lcp/$(am__dirstamp) lcp/$(DEPDIR)/$(am__dirstamp)
+./lcp/lcp_datatype.lo: lcp/$(am__dirstamp) \
+	lcp/$(DEPDIR)/$(am__dirstamp)
 lcr/$(am__dirstamp):
 	@$(MKDIR_P) ./lcr
 	@: > lcr/$(am__dirstamp)
@@ -1002,6 +1007,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./ib/$(DEPDIR)/qp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_context.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_datatype.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_ep.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_mem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./lcp/$(DEPDIR)/lcp_pending.Plo@am__quote@
