--- a/src/MPC_OpenMP/Makefile.am
+++ b/src/MPC_OpenMP/Makefile.am
@@ -22,18 +22,7 @@
 #                                                                      #
 ########################################################################
 mpc_headerdir=$(pkgincludedir)
-mpc_header_HEADERS= ./include/omp_abi.h                 \
-                    ./include/mpc_omp_abi.h             \
-					./include/mpc_omp.h                 \
-					./include/mpc_omp_interop_cuda.h    \
-					./include/mpc_omp_interop_mpi.h     \
-					./include/mpc_omp.h                 \
-                    ./include/mpc_omp_task_property.h   \
-                    ./include/mpc_omp_task_trace.h      \
-                    ./include/mpc_omp_task_label.h      \
-                    ./include/mpc_omp_task_scheduling.h \
-					./include/omp.h                     \
-                    ./include/ompt.h                    \
-                    ./include/omp-tools.h               \
-                    ./include/omp_gomp_constants.h
+mpc_header_HEADERS= ./include/omp_abi.h ./include/mpc_omp_abi.h \
+					./include/mpc_omp.h include/mpc_omp_task_property.h include/mpc_omp_task_trace.h \
+					./include/omp.h ./include/ompt.h ./include/omp-tools.h ./include/omp_gomp_constants.h
 SUBDIRS=src
